--- a/package.json
+++ b/package.json
@@ -10,28 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/jszip": "^3.1.4",
-    "@vaadin/vaadin-button": "^2.1.0",
-    "@vaadin/vaadin-checkbox": "^2.2.3",
-    "@vaadin/vaadin-combo-box": "^4.2.0-beta2",
-    "@vaadin/vaadin-context-menu": "^4.2.0",
-    "@vaadin/vaadin-date-picker": "^3.3.0",
-    "@vaadin/vaadin-dialog": "^2.2.0",
-    "@vaadin/vaadin-dropdown-menu": "^1.2.0-beta1",
-    "@vaadin/vaadin-form-layout": "^2.1.0",
-    "@vaadin/vaadin-grid": "^5.2.1",
-    "@vaadin/vaadin-icons": "^4.2.1",
-    "@vaadin/vaadin-item": "^2.1.0",
-    "@vaadin/vaadin-list-box": "^1.1.0",
-    "@vaadin/vaadin-notification": "^1.2.0",
-    "@vaadin/vaadin-ordered-layout": "^1.1.0",
-    "@vaadin/vaadin-progress-bar": "^1.1.0",
-    "@vaadin/vaadin-radio-button": "^1.1.2",
-    "@vaadin/vaadin-split-layout": "^4.1.0",
-    "@vaadin/vaadin-tabs": "^2.1.1",
-    "@vaadin/vaadin-text-field": "^2.1.3",
-    "@vaadin/vaadin-upload": "^4.2.1",
+    "@vaadin/vaadin-core": "^13.0.1",
+    "@vaadin/vaadin-grid": "^5.3.3",
+    "@vaadin/vaadin-tabs": "^2.1.2",
     "file-saver": "^2.0.0-rc.4",
-    "jszip": "^3.1.5"
+    "jszip": "^3.1.5",
+    "prettier": "^1.16.4"
   },
   "devDependencies": {}
 }
