--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vaadin/vaadin-core": "^13.0.1",
     "@vaadin/vaadin-grid": "^5.3.3",
     "@vaadin/vaadin-tabs": "^2.1.2",
+    "codemirror": "^5.44.0",
     "file-saver": "^2.0.0-rc.4",
     "jszip": "^3.1.5",
     "prettier": "^1.16.4"
