Add eslint, fix a few lint errors.. Leave a few more behind

--- a/package.json
+++ b/package.json
@@ -18,5 +18,7 @@
     "jszip": "^3.1.5",
     "prettier": "^1.16.4"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "^5.15.3"
+  }
 }
