--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "https://github.com/mjvesa/UniDe",
   "main": "unide.js",
   "scripts": {
-    "start-dev": "polymer serve --npm",
+    "dev": "polymer serve --npm",
     "build": "polymer build --preset es6-bundled",
     "test": "jest"
   },
