--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "codemirror": "^5.44.0",
     "file-saver": "^2.0.0-rc.4",
     "jszip": "^3.1.5",
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.4",
+    "vanilla-picker": "^2.7.2"
   },
   "devDependencies": {
     "eslint": "^5.15.3",
