--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "codemirror": "^5.44.0",
     "file-saver": "^2.0.0-rc.4",
     "jszip": "^3.1.5",
-    "prettier": "^1.16.4",
     "vanilla-picker": "^2.7.2"
   },
   "devDependencies": {
@@ -30,6 +29,7 @@
     "rollup": "^1.16.2",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-css-only": "^1.0.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^5.1.0",
     "rollup-plugin-terser": "^5.0.0",
     "serve": "^11.0.2"
