Add config for electron

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Universal Designer for templates using Vaadin Components",
   "repository": "https://github.com/mjvesa/UniDe",
-  "main": "unide.js",
+  "main": "public/index.js",
   "scripts": {
     "build": "rollup -c",
     "watch": "rollup -c -w",
@@ -18,6 +18,7 @@
     "@vaadin/vaadin-grid": "^5.4.8",
     "@vaadin/vaadin-tabs": "^3.0.4",
     "codemirror": "^5.44.0",
+    "electron": "^6.0.9",
     "file-saver": "^2.0.0-rc.4",
     "jszip": "^3.1.5",
     "vanilla-picker": "^2.7.2"
