--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "watch": "rollup -c -w",
     "dev": "npm-run-all --parallel start watch",
     "start": "serve public",
-    "test": "jest"
+    "test": "jest",
+    "test-coverage": "jest --coverage"
   },
   "author": "Matti Vesa",
   "categories": [
@@ -45,8 +46,13 @@
     "vanilla-picker": "^2.7.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.10.3",
+    "@types/vscode": "^1.32.0",
+    "babel-jest": "^26.1.0",
     "eslint": "^5.15.3",
-    "jest": "^24.5.0",
+    "esm": "^3.2.25",
+    "jest": "^26.1.0",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.16.2",
     "rollup-plugin-commonjs": "^10.0.0",
@@ -54,7 +60,7 @@
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^5.1.0",
     "rollup-plugin-terser": "^5.0.0",
-    "serve": "^11.0.2",
-    "@types/vscode": "^1.32.0"
+    "selenium-webdriver": "^4.0.0-alpha.7",
+    "serve": "^11.0.2"
   }
 }
