--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unide",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "Universal visual designer for Vaadin",
   "repository": "https://github.com/mjvesa/unide-src",
   "icon": "public/images/unide_tiny.png",
@@ -12,8 +12,10 @@
     "watch": "rollup -c -w",
     "dev": "npm-run-all --parallel start watch",
     "start": "serve public",
-    "test": "jest",
-    "test-coverage": "jest --coverage"
+    "test": "jest --group=unit",
+    "test-all": "jest --group=unit --group=selenium",
+    "test-coverage": "jest --group=unit --group=selenium --coverage",
+    "test-selenium": "jest --group=selenium"
   },
   "author": "Matti Vesa",
   "categories": [
@@ -46,6 +48,7 @@
     "vanilla-picker": "^2.7.2"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
     "@types/vscode": "^1.32.0",
     "babel-jest": "^26.1.0",
@@ -53,6 +56,9 @@
     "esm": "^3.2.25",
     "jest": "^26.1.0",
     "jest-environment-jsdom-sixteen": "^1.0.3",
+    "jest-environment-selenium": "^2.1.2",
+    "jest-environment-webdriver": "^0.2.0",
+    "jest-runner-groups": "^2.0.1",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.16.2",
     "rollup-plugin-commonjs": "^10.0.0",
