--- a/package.json
+++ b/package.json
@@ -37,34 +37,34 @@
     ]
   },
   "dependencies": {
-    "@vaadin/vaadin-core": "^14.0.3",
-    "@vaadin/vaadin-grid": "^5.4.8",
-    "@vaadin/vaadin-tabs": "^3.0.4",
-    "codemirror": "^5.44.0",
-    "electron": "^9.1.0",
-    "file-saver": "^2.0.0-rc.4",
-    "jszip": "^3.1.5",
+    "@vaadin/vaadin-core": "^15.0.6",
+    "@vaadin/vaadin-grid": "^5.6.6",
+    "@vaadin/vaadin-tabs": "^3.1.0",
+    "codemirror": "^5.56.0",
+    "electron": "^9.1.1",
+    "file-saver": "^2.0.2",
+    "jszip": "^3.5.0",
     "jszip-utils": "^0.1.0",
-    "vanilla-picker": "^2.7.2"
+    "vanilla-picker": "^2.10.1"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.10.3",
-    "@babel/preset-env": "^7.10.3",
-    "@types/vscode": "^1.32.0",
+    "@babel/plugin-transform-runtime": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "@types/vscode": "^1.47.0",
     "babel-jest": "^26.1.0",
-    "eslint": "^5.15.3",
+    "eslint": "^7.5.0",
     "esm": "^3.2.25",
     "jest": "^26.1.0",
     "jest-environment-webdriver": "^0.2.0",
     "jest-runner-groups": "^2.0.1",
     "npm-run-all": "^4.1.5",
-    "rollup": "^1.16.2",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-css-only": "^1.0.0",
+    "rollup": "^2.23.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-css-only": "^2.1.0",
     "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-resolve": "^5.1.0",
-    "rollup-plugin-terser": "^5.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^6.1.0",
     "selenium-webdriver": "^4.0.0-alpha.7",
-    "serve": "^11.0.2"
+    "serve": "^11.3.2"
   }
 }
